--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h1{
 	position: absolute;
 	bottom: 0; left: 0;
 	width: 100%;
-    background-color: #957c69;
+    background-color: #957c69a2;;
     height: 65px;
 }
 .btnplan {
