--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ h1{
     background-color: #ffffff;;
     height: 85px;
     border: #000000 solid 1px;
+    border-bottom: #ffffff;
 }
 .btnplan {
     
